# libcoinexchange

./: .gitignore  README.md
sample_data/: BTC-USD.json  products.json
src/: CMakeLists.txt
src/example/: CMakeLists.txt  hello_exchange.cpp
src/include/libcoinexchange/: connect_exchange.h  connection.h  connection_factory.h
src/libsrc/: CMakeLists.txt  connect_exchange.cpp  connection.cpp  connection_factory.cpp
src/unit_test/: CMakeLists.txt  connect_exchange_test.cpp  connection_factory_test.cpp
